# mdmailbox

./: Makefile  README.md  flake.nix  pyproject.toml  spec.md
docs/adr/: 001-design.md
mdmail/: authinfo.py  cli.py  email.py  smtp.py
mdmailbox/: _docs.py  cli.py  email.py  smtp.py  validate.py
tests/: test_integration.py
