[project]
name = "mdmail"
version = "0.1.3"
description = "Email as plain text files with YAML frontmatter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
mdmail = "mdmail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "smtpdfix>=0.5.3",
]
